--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,30 @@
-/*Preformatação Geral*/
+:root{
+
+    /*Color*/
+--primary-color: #fff;
+--blue-color: #1f89ff;
+--bue-color-hv: #1969c4;
+--txt-color: #000;
+--navlink-txt-color: #222;
+--bs-color: #dadada;
+--card-color: #f0f0f0;
+--i-bg-color: #f2f2f2;
+--properties-sec-color: #fbfbfb;
+
+    /*Sizes*/
+--border-radius:2rem;
+--pd-nav: 1rem;
+--txt-fw: 500;
+--header-txt: 7vmin;
+
+    /*Others*/
+--ts-time: all .4s ease-out;
+--nav-bar-bs: 0.2rem 0.2rem 0.2rem #dadada;
+--card-bs: 0.2rem 0.3rem 1rem #f0f0f0, -0.1rem -0.1rem 1rem #f0f0f0;
+}
+
+
+/*----------- Reset -----------*/
 *{
     margin: 0;
     padding: 0;
@@ -10,8 +36,64 @@ ul{ list-style: none;}
 a{ text-decoration: none;}
 
 section{
-    width: 80%;
+    width: 90%;
     margin: 1rem auto;
+}
+
+header{
+    width: 100%;
+    background-color: var(--primary-color);
+    box-shadow: var(--nav-bar-bs);
+}
+
+/*----------- Components -----------*/
+.ctn{
+    background-color: var(--blue-color);
+    color: var(--primary-color) !important;
+    border-radius: var(--border-radius);
+    padding: calc(var(--pd-nav) - .4rem) var(--pd-nav) !important;
+}
+
+.ctn:hover{
+    background-color: var(--bue-color-hv);
+    transition: var(--ts-time);
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--blue-color);
+}
+
+/*----------- Navegation Bar -----------*/
+.navBar{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: var(--pd-nav);
+}
+
+.navBar h1{
+    color: var(--txt-color);
+}
+
+.navBar h1 .fa-home{
+    color: var(--blue-color);
+}
+
+.navLinks li{
+    display: inline-block;
+    margin-left: calc(var(--pd-nav) + 1rem);
+    padding: calc(var(--pd-nav) - .7rem);
+}
+
+.navLinks li a{
+    font-weight: var(--txt-fw);
+    color: var(--navlink-txt-color);
 }
 
 
@@ -21,15 +103,16 @@ section{
     border: none;
     width: 2rem;
     display: none;
+    
 }
 
 .menuBtn div{
     width: 100%;
     height: 4px;
-    background-color: #fff;
+    background-color: var(--blue-color);
     margin: 5px 0;
     border-radius: 3px;
-    transition: all .5s;
+    transition: var(--ts-time);
 }
 
 .menuBtn.active div:nth-child(1){
@@ -47,8 +130,20 @@ section{
 
 .menuBtn:hover{
     cursor: pointer;
-    scale: 1.1;
 }
+
+/*----------- Hero -----------*/
+.hero{
+    width: 100%;
+    height: calc(100vh - 4rem);
+    margin: 0;
+    background-color: #1969c4;
+    background-image: url('../img/home.jpg');
+    background-position: center;
+    background-size: cover;
+    
+}
+
 
 /*Mobile Responsivity*/
 @media screen and (max-width: 858px) {
