--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,7 @@ width: 60%;
     margin: calc(var(--pd-nav) * 2);
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1rem 3rem;
 }
 
@@ -284,41 +285,114 @@ footer{
     padding: calc(var(--pd-nav) / 2);
 }
 
+
 /*----------- Mobile Responsivity -----------*/
-@media screen and (max-width: 858px) {
+@media screen and (width <= 858px) {
        /*Navigation Bar*/
     .menuBtn{
         display: block;
     }
 
-    .navLinks {
-        height: 100vh;
+    .nav_links {
+        height: calc(100vh - 4rem);
         width: 100%;
-        background-color: #282872;
+        background-color: var(--primary-color);
         position: absolute;
         top: 4rem;
         right: 0;
         left: -100%;
-        flex-direction: column;
         text-align: center;
-        transition: all .5s ease;
+        transition: var(--ts-time);
+    }
+
+    .nav_links li{
+        display: block;
     }
 
     .mobileMenu{
-        left: 0;
+        left: 0%;
     }
 
-    .navLinks li:nth-child(1){
+    .nav_links li:nth-child(1){
         margin-top: 8rem;
     }
 
-    .navLinks li{
+    .nav_links li{
         margin-top: 1rem;
     }
 
-    .navLinks li a{
-        font-size: 1.2rem;
-        color: #fff;
-        font-weight: normal;
+    /*----------- Hero -----------*/
+
+    .hero_content{
+        width: 100%;
+    }
+
+    /*----------- About Us -----------*/
+
+    .about_us{
+        flex-direction: column;
+    }
+
+    .about_us .image_col{
+        width: 100%;
+    }
+    .about_us .content_col{
+        margin-top: var(--pd-nav);
+        width: 100%;
+    }
+
+    /*----------- Services -----------*/
+
+    .services{
+        flex-direction: column;
+    }
+
+    .services .item_service{
+        margin-top: var(--pd-nav);
+        width: 90%;
+    }
+
+    /*----------- Properties -----------*/
+
+    .properties_content p{
+        width: 100%;
+    }
+    
+    .properties .row{
+        flex-direction: column;
+    }
+
+    .property_card{
+        width: 100%;
+    }
+
+    /*----------- Help -----------*/
+
+    .help h2{
+    width: 90%;
+    }
+
+    /*----------- Footer -----------*/
+
+    .footer_content{
+        flex-direction: column;
+    }
+
+    .footer_content .col{
+        width: 100%;
+        margin-top: var(--pd-nav);
+    }
+
+}
+
+/*----------- Tablet Responsivity -----------*/
+
+@media screen and (width <= 900px) {
+
+    .property_card{
+        flex: 1 1 30%;
+        width: 50%;
     }
 }
+
+/*----------- Code by MIGUEL KAMBAMBA -----------*/
